--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,8 +7,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-       
-      
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".Synergy"
                   android:label="@string/app_name">
@@ -17,6 +17,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:enabled="true"
+            android:name="org.synergy.Servicio"
+            android:icon="@drawable/icon"/>
 
     </application>
     <uses-sdk android:minSdkVersion="8" />
