--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.VIBRATE"/>
     
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:theme="@style/MyTheme" android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".Synergy"
                   android:label="@string/app_name">
             <intent-filter>
